5.0.0 -> 5.1a1:
    - jbj: use Realpath(3) so that RPMTAG_PACKAGEORIGIN has absolute path.
    - jbj: rpmio: add Realpath(3).
    - jbj: fix: header ext for PACKAGEORIGIN needs xstrdup.
    - jbj: use header ext to permit %{PACKAGEORIGIN} for -qp to show *.rpm path.
    - jbj: mire: make mireClean mode specific. PCRE additions aren't initialized
    - jbj: doxygen: make a pass removing many warnings ...
    - jbj: rpmio: tglob added to EXTRA_PROGRAMS.
    - jbj: add rpmgrep.c and poptIO.c to PO and doxygen file lists.
    - jbj: sync translations (Translation Project).
    - jbj: add "make updatepo" to simplify PO file maintenance.
    - rpm.org: Improve header i18n locale matching.
    - jbj: url: parse ?query#fragment from URI's.
    - jbj: mire: add mireLoadPatterns() routine.
    - jbj: mire: add mireAppend() routine.
    - jbj: mire: add mireApply() and mireFreeAll() routines.
    - jbj: rpmgrep: attempt LZMA decompress with ".lzma" suffix.
    - jbj: rpmgrep: apply multiple --include/--exclude patterns to paths.
    - jbj: rpmgrep: permit multiple --file, --exclude, and --include options.
    - jbj: rpmgrep: collapse option booleans into a grepFlags bit set.
    - jbj: rpmgrep: fix last 2 "make check" failures.
    - jbj: rpmgrep: install in bindir with man page.
    - rpm-maint: fix: limit exit codes to 254 to keep xargs happy.
    - jbj: mire: add vallen argument to mireRegexec().
    - jbj: borrow pcregrep.c from pcre-7.6, rename as rpmgrep.c.
    - jbj: rpmio: use tmire.c, not -DSTANDALONE, so librpmio doesnt rebuild.
    - jbj: rpmio: add tmire to noinst_PROGRAMS.
    - jbj: rpmio: add --regex/--pcre/--fnmatch/--strcmp tmire match options
    - jbj: mire: add RPMMIRE_PCRE for the pcre(3) inclined.
    - jbj: tweak up tmire with rpmioAllPoptTable.
    - jbj: rpmio: add global __debug to use common rpmioAllPopt --debug option.
    - jbj: use poptIO with rpmio noinst_PROGRAMS.
    - jbj: rpmio: clone poptIO.[ch] from poptALL.c for rpmio noinst_PROGRAMS.